part2/2.03/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-ping-log-ns
# Remember that the deployments/pods/ingress/services are created inside the namespace, to which you have to switch into with kubens
